[workspace]
members = ["core", "tokio", "async-std"]
resolver = "2"

[workspace.dependencies]
static_assertions = "1"
bitmask-enum = "2"
either = "1"
unicase = "2"
anyhow = "1"
rustyline = "10"
clap = "4"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.phf]
version = "0.11"
features = ["macros"]

[workspace.dependencies.tokio]
version = "1"
default-features = false

[workspace.dependencies.async-io]
version = "1"

[workspace.dependencies.async-std]
version = "1"

[workspace.dependencies.hidg-core]
path = "core"
default-features = false

[workspace.dependencies.hidg]
path = ""
default-features = false

[package]
name = "hidg"
description = "Linux USB HID Gadget emulation"
version = "0.1.2"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis"]
keywords = ["USB", "Gadget", "HID", "Linux", "Input"]
edition = "2021"

[dependencies.hidg-core]
workspace = true
default-features = false

[features]
default = ["fromstr", "display", "phf", "keyboard", "mouse"]
fromstr = ["hidg-core/fromstr"]
display = ["hidg-core/display"]
phf = ["hidg-core/phf"]
#unicase = ["hidg-core/unicase"]
either = ["hidg-core/either"]
serde = ["hidg-core/serde"]
keyboard = ["hidg-core/keyboard"]
mouse = ["hidg-core/mouse"]
