[workspace]
members = ["core", "tokio", "async"]
resolver = "2"

[workspace.dependencies]
libc = "0.2"
static_assertions = "1"
bitflags = "2"
either = "1"
unicase = "2"
async-io = "2"
blocking = "1"
smol = "2"
smol-potat = "1"
anyhow = "1"
rustyline = "10"
clap = "4"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.phf]
version = "0.11"
features = ["macros"]

[workspace.dependencies.tokio]
version = "1"
default-features = false

[workspace.dependencies.hidg-core]
path = "core"
default-features = false

[workspace.dependencies.hidg]
path = ""
default-features = false

[package]
name = "hidg"
description = "Linux USB HID Gadget emulation"
version = "0.1.2"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis"]
keywords = ["USB", "Gadget", "HID", "Linux", "Input"]
edition = "2021"

[dependencies.hidg-core]
workspace = true
default-features = false

[features]
default = ["fromstr", "display", "phf", "keyboard", "mouse"]
fromstr = ["hidg-core/fromstr"]
display = ["hidg-core/display"]
phf = ["hidg-core/phf"]
#unicase = ["hidg-core/unicase"]
either = ["hidg-core/either"]
serde = ["hidg-core/serde"]
keyboard = ["hidg-core/keyboard"]
mouse = ["hidg-core/mouse"]
