[workspace]
members = ["core", "tokio", "async"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/katyo/hidg-rs"
homepage = "https://github.com/katyo/hidg-rs"

[workspace.dependencies]
libc = "0.2"
static_assertions = "1"
bitflags = "2"
either = "1"
unicase = "2"
async-io = "2"
blocking = "1"
smol = "2"
smol-potat = "1"
anyhow = "1"
rustyline = "10"
clap = "4"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.phf]
version = "0.11"
features = ["macros"]

[workspace.dependencies.tokio]
version = "1"
default-features = false

[workspace.dependencies.hidg-core]
path = "core"
default-features = false

[workspace.dependencies.hidg]
path = ""
default-features = false

[package]
name = "hidg"
description = "Linux USB HID Gadget emulation"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories = ["os", "os::linux-apis"]
keywords = ["USB", "Gadget", "HID", "Linux", "Input"]

[dependencies.hidg-core]
workspace = true
default-features = false

[features]
default = ["fromstr", "display", "phf", "keyboard", "mouse"]
fromstr = ["hidg-core/fromstr"]
display = ["hidg-core/display"]
phf = ["hidg-core/phf"]
#unicase = ["hidg-core/unicase"]
either = ["hidg-core/either"]
serde = ["hidg-core/serde"]
keyboard = ["hidg-core/keyboard"]
mouse = ["hidg-core/mouse"]
