[package]
name = "async-std-hidg"
description = "Linux USB HID Gadget emulation for async-std runtime"
version = "0.1.2"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis", "asynchronous"]
keywords = ["USB", "Gadget", "HID", "Linux", "Input"]
edition = "2021"

[dependencies.hidg-core]
workspace = true
default-features = false

[dependencies.async-io]
workspace = true

[dependencies.async-std]
workspace = true

[dev-dependencies.async-std]
workspace = true
features = ["attributes"]

[features]
default = ["fromstr", "display", "phf", "keyboard", "mouse"]
fromstr = ["hidg-core/fromstr"]
display = ["hidg-core/display"]
phf = ["hidg-core/phf"]
#unicase = ["hidg-core/unicase"]
either = ["hidg-core/either"]
serde = ["hidg-core/serde"]
keyboard = ["hidg-core/keyboard"]
mouse = ["hidg-core/mouse"]
