[package]
name = "async-hidg"
description = "Linux USB HID Gadget emulation with async interface"
version = "0.2.0"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis", "asynchronous"]
keywords = ["USB", "Gadget", "HID", "Linux", "Input"]
edition = "2021"

[dependencies.hidg-core]
workspace = true
default-features = false

[dependencies.async-io]
workspace = true

[dependencies.blocking]
workspace = true

[dev-dependencies.smol]
workspace = true

[dev-dependencies.smol-potat]
workspace = true

[features]
default = ["fromstr", "display", "phf", "keyboard", "mouse"]
fromstr = ["hidg-core/fromstr"]
display = ["hidg-core/display"]
phf = ["hidg-core/phf"]
#unicase = ["hidg-core/unicase"]
either = ["hidg-core/either"]
serde = ["hidg-core/serde"]
keyboard = ["hidg-core/keyboard"]
mouse = ["hidg-core/mouse"]
