[package]
name = "hidg-cli"
description = "Linux USB HID Gadget emulation. Command-line tool"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["USB", "Gadget", "HID", "Linux", "Input"]
publish = false

[[bin]]
name = "hidg"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
rustyline.workspace = true

[dependencies.hidg]
workspace = true
default-features = false
features = ["fromstr", "display", "phf", "keyboard", "mouse"]

[dependencies.clap]
workspace = true
features = ["derive"]
