[package]
name = "hidg-core"
description = "Linux USB HID Gadget emulation"
version = "0.1.0"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis"]
keywords = ["USB", "Gadget", "HID", "Linux", "Input"]
edition = "2021"

[dependencies.static_assertions]
version = "1"

[dependencies.bitmask-enum]
version = "2"

[dependencies.serde]
version = "1"
default-features = false
features = ["std", "derive"]
optional = true

[dependencies.either]
version = "1"
optional = true

[dependencies.phf]
version = "0.11"
features = ["macros"]
optional = true

[dependencies.unicase_]
package = "unicase"
version = "2"
optional = true

[features]
default = ["fromstr", "display", "phf", "keyboard", "mouse"]
fromstr = []
display = []
#unicase = ["unicase_", "phf/unicase"]
keyboard = []
mouse = []
