[package]
name = "hidg-core"
description = "Linux USB HID Gadget emulation"
version = "0.2.0"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis"]
keywords = ["USB", "Gadget", "HID", "Linux", "Input"]
edition = "2021"

[dependencies]
static_assertions.workspace = true
bitflags.workspace = true

[dependencies.serde]
workspace = true
optional = true

[dependencies.either]
workspace = true
optional = true

[dependencies.phf]
workspace = true
optional = true

#[dependencies.unicase]
#workspace = true
#optional = true

[features]
default = ["fromstr", "display", "phf", "keyboard", "mouse"]
fromstr = []
display = []
#unicase = ["dep:unicase", "phf?/unicase"]
keyboard = []
mouse = []
